[gd_scene load_steps=25 format=2]

[ext_resource path="res://Space.gd" type="Script" id=1]
[ext_resource path="res://Space.png" type="Texture" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Frying Pan.png" type="Texture" id=5]
[ext_resource path="res://Fry.gd" type="Script" id=6]
[ext_resource path="res://TotalScore.gd" type="Script" id=7]
[ext_resource path="res://High Score.gd" type="Script" id=8]

[sub_resource type="Theme" id=45]

[sub_resource type="DynamicFont" id=46]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=47]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=31]
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("FadeAnimationPlayer/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.160784, 0.160784, 0.160784, 0 ), Color( 0.160784, 0.160784, 0.160784, 1 ) ]
}

[sub_resource type="Theme" id=32]

[sub_resource type="DynamicFont" id=43]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.145098, 0.137255, 0.156863, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.282353, 0.278431, 0.290196, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.145098, 0.137255, 0.156863, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 20
shadow_color = Color( 1, 0.054902, 0.054902, 1 )

[sub_resource type="DynamicFont" id=44]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.145098, 0.137255, 0.156863, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 0.909804, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.498039, 0.027451, 0.027451, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 0.145098, 0.137255, 0.156863, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 10

[sub_resource type="CircleShape2D" id=1]
radius = 52.6118

[node name="Menu" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 960, 540 )
z_index = 30
texture = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="High Score" type="Label" parent="UI"]
margin_left = 536.0
margin_top = 326.0
margin_right = 923.0
margin_bottom = 365.0
theme = SubResource( 45 )
custom_fonts/font = SubResource( 46 )
text = "High Score:"
script = ExtResource( 8 )

[node name="TotalScore" type="Label" parent="UI"]
margin_left = 500.0
margin_top = 300.0
margin_right = 540.0
margin_bottom = 314.0
custom_fonts/font = SubResource( 47 )
text = "Total Score:"
script = ExtResource( 7 )

[node name="Control" type="Control" parent="UI"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="FadeAnimationPlayer" type="AnimationPlayer" parent="UI/Control"]
anims/Fade = SubResource( 31 )

[node name="Fade" type="ColorRect" parent="UI/Control/FadeAnimationPlayer"]
visible = false
modulate = Color( 0.160784, 0.160784, 0.160784, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="Buttons" type="VBoxContainer" parent="UI/Control"]
light_mask = 2
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 500.0
margin_top = 330.0
margin_right = 974.0
margin_bottom = 468.0
rect_min_size = Vector2( 300, 0 )

[node name="StartButton" type="Button" parent="UI/Control/Buttons"]
light_mask = 2
margin_right = 474.0
margin_bottom = 81.0
theme = SubResource( 32 )
custom_colors/font_color_disabled = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_fonts/font = SubResource( 43 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 34 )
custom_styles/focus = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
button_mask = 0
text = "Start"

[node name="Shop" type="Button" parent="UI/Control/Buttons"]
light_mask = 2
margin_top = 85.0
margin_right = 474.0
margin_bottom = 166.0
theme = SubResource( 32 )
custom_colors/font_color_disabled = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_fonts/font = SubResource( 43 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 34 )
custom_styles/focus = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
button_mask = 0
text = "Customize"

[node name="QuitButton" type="Button" parent="UI/Control/Buttons"]
light_mask = 2
margin_top = 170.0
margin_right = 474.0
margin_bottom = 251.0
theme = SubResource( 32 )
custom_colors/font_color_disabled = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_fonts/font = SubResource( 44 )
custom_styles/hover = SubResource( 38 )
custom_styles/pressed = SubResource( 39 )
custom_styles/focus = SubResource( 40 )
custom_styles/normal = SubResource( 41 )
button_mask = 0
text = "Save & Quit"

[node name="Shooty" type="KinematicBody2D" parent="."]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Shooty"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Shoots" type="Area2D" parent="Shooty"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooty/Shoots"]
position = Vector2( 42, 0 )
shape = SubResource( 1 )

[node name="ResetTimer" type="Timer" parent="Shooty"]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="UI/Control/Buttons/StartButton" to="UI/Control" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="UI/Control/Buttons/Shop" to="UI/Control" method="_on_Shop_pressed"]
[connection signal="pressed" from="UI/Control/Buttons/QuitButton" to="UI/Control" method="_on_QuitButton_pressed"]
[connection signal="area_exited" from="Shooty/Shoots" to="Shooty" method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Shooty/ResetTimer" to="Shooty" method="_on_ResetTimer_timeout"]
